# ptapro

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  实习实训开发文档（SCU一年级）v1.2.doc
include/ptapro/core/: CodecTypes.h
include/ptapro/services/: DecoderService.h  EncoderService.h
include/ptapro/ui/: MainWindow.h
src/: main.cpp
src/core/: CodecTypes.cpp
src/services/: DecoderService.cpp  EncoderService.cpp
src/ui/: MainWindow.cpp
